tempfile/derive_more/tests/compile_fail/try_from/struct.rs
#[derive(derive_more::TryFrom)]
struct Struct;

fn main() {}
